kubernetes/apps/observability/gatus/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Gatus"
    homepage.shamubernetes.com/description: "Service availability dashboard"
    homepage.shamubernetes.com/group: "Observability"
    homepage.shamubernetes.com/order: "20"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:gatus"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "gatus.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gatus
      port: 80
